fix overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,6 +77,7 @@ footer {
 }
 
 main{
+  
     padding-top: 70px;
 }
 
@@ -89,6 +90,7 @@ main{
 }
 
 section {
+  overflow: hidden;
   height: 100%;
   padding-bottom: 20px;
 }
